# gimlet

./: .gitignore  CLAUDE.md  Makefile  README.md  REFACTOR_PLAN.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: agent-healthcheck-plan.md
examples/fly-io/: README.md
examples/fly-io/server/: Dockerfile  fly.toml
src/agent/: go.mod  go.sum  main.go
src/agent/config/: config.go
src/agent/connection/: handler.go  handler_test.go
src/agent/health/: checker.go  checker_test.go
src/agent/messages/: messages.go
src/gimlet/: __init__.py  cli.py  jwt.py  wildcard.py
src/protocol/: dialer.go  frame.go  go.mod  logging.go  websocket.go
src/server/: go.mod  go.sum  main.go
src/server/agentmgr/: agent.go  agent_test.go
src/server/auth/: jwt.go  jwt_test.go  wildcard.go  wildcard_test.go
src/server/config/: config.go
src/server/errors/: errors.go
src/server/handlers/: http.go  http_integration_test.go  http_test.go
src/server/interfaces/: interfaces.go
src/server/metrics/: metrics.go
tests/: conftest.py  test_auth.py  test_disruption.py  test_e2e.py  test_jwt.py  test_load.py
tests/resources/: docker-compose.yml
tests/resources/grafana/provisioning/dashboards/: default.yml  gimlet.json
tests/resources/grafana/provisioning/datasources/: prometheus.yml
tests/resources/nginx/: backend-v2-nginx.conf  nginx.conf
tests/resources/prometheus/: prometheus.yml
